# fontconfig-parser

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: parse_test_conf.rs
examples/: dump.rs  list_all_fonts.rs
src/: error.rs  lib.rs  parser.rs  types.rs  util.rs
src/types/: alias.rs  config.rs  constant.rs  dir.rs  document.rs  match_.rs  property.rs  selectfont.rs  value.rs
src/types/match_/: edit.rs  test.rs
test-conf/: fonts.conf
tests/: 10-scale-bitmap-fonts.rs  10_scale_bitmap_fonts.rs  53_nixos_reject_types1.rs  60_latin.rs  fonts.rs  parse.rs
