[package]
name = "fontconfig-parser"
version = "0.3.0"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/fontconfig-parser"
description = "fontconfig file parser in pure Rust"
repository = "https://github.com/Riey/fontconfig-parser"
homepage = "https://github.com/Riey/fontconfig-parser"
readme = "README.md"
categories = ["parser-implementations"]
keywords = ["fontconfig"]

[dependencies]
roxmltree = "0.14.1"
serde = { version = "1.0.130", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.3.5"
glob = "0.3.0"
k9 = "0.11.1"
serde_yaml = "0.8.21"

[[bench]]
name = "parse_test_conf"
harness = false

[profile.bench]
lto = "thin"

[profile.release]
lto = "thin"
