[package]
name = "fontconfig-parser"
version = "0.5.0"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/fontconfig-parser"
description = "fontconfig file parser in pure Rust"
repository = "https://github.com/Riey/fontconfig-parser"
homepage = "https://github.com/Riey/fontconfig-parser"
readme = "README.md"
categories = ["parser-implementations"]
keywords = ["fontconfig"]

[features]
serialize = ["serde"]

[dependencies]
log = { version = "0.4.14", optional = true }
roxmltree = "0.14"
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.3.5"
glob = "0.3.0"
k9 = "0.11.1"
serde_yaml = "0.8.21"

[[bench]]
name = "parse_test_conf"
harness = false

[profile.bench]
lto = "thin"

[profile.release]
lto = "thin"
