[package]
name = "fontconfig-parser"
version = "0.5.6"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/fontconfig-parser"
description = "fontconfig file parser in pure Rust"
repository = "https://github.com/Riey/fontconfig-parser"
homepage = "https://github.com/Riey/fontconfig-parser"
readme = "README.md"
categories = ["parser-implementations"]
keywords = ["fontconfig"]

[features]
serialize = ["serde"]

[dependencies]
log = { version = "0.4", optional = true }
roxmltree = "0.19"
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
glob = "0.3"
k9 = "0.12"
serde_json = "1"

[[bench]]
name = "parse_test_conf"
harness = false

[profile.bench]
lto = "thin"

[profile.release]
lto = "thin"
